# Document-handler

./: Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  mcp-config.example.json  pyproject.toml  requirements.txt  server.py  setup.sh  tender_docs_mcp.py  tri_tender_mcp_server Document handler (1).py  types.d.ts
tests/: __init__.py  test_server.py  test_tender_docs.py
