[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tender-docs-mcp"
version = "1.0.0"
description = "FastMCP server for parsing, analyzing, and managing tender documents for tri-tender"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tri-Tender Team" }
]
keywords = [
    "mcp",
    "fastmcp",
    "model-context-protocol",
    "tender",
    "document-processing",
    "ocr",
    "pdf",
    "docx"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

# Core dependencies for FastMCP Cloud
dependencies = [
    "fastmcp>=2.0.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
# OCR support (requires system dependencies)
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
]

# Full installation with all features
full = [
    "tender-docs-mcp[ocr]",
    "reportlab>=4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tender-docs-mcp = "server:mcp.run"

[project.urls]
Homepage = "https://github.com/tri-tender/tender-docs-mcp"
Documentation = "https://github.com/tri-tender/tender-docs-mcp#readme"
Repository = "https://github.com/tri-tender/tender-docs-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
